[gd_scene load_steps=11 format=3 uid="uid://b14v66658f78l"]

[ext_resource type="Texture2D" uid="uid://dn1ely4x28j4u" path="res://Assets/UI/MiniPanel01.jpg" id="1_tjgd3"]
[ext_resource type="Script" path="res://Scenes/Destination/crewmateNameplate.gd" id="2_whse1"]
[ext_resource type="FontFile" uid="uid://j5854hdtucyt" path="res://Assets/Font/Montserrat-VariableFont_wght.ttf" id="3_h7xv4"]
[ext_resource type="Texture2D" uid="uid://b1f8gka4f1pfv" path="res://Assets/Portraits/Human (1).jpg" id="4_5myyk"]
[ext_resource type="Texture2D" uid="uid://duw72oq56p7lo" path="res://Assets/UI/BarV1_Bar.png" id="5_68vwr"]
[ext_resource type="Texture2D" uid="uid://cmic4emrc6gri" path="res://Assets/UI/BarV1_ProgressBar.png" id="6_t032h"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gy2l0"]
texture = ExtResource("1_tjgd3")

[sub_resource type="LabelSettings" id="LabelSettings_pjgor"]
font = ExtResource("3_h7xv4")
font_size = 30

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5yk5s"]
texture = ExtResource("5_68vwr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pwo5t"]
texture = ExtResource("6_t032h")

[node name="PanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(120, 0)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxTexture_gy2l0")
script = ExtResource("2_whse1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="crewmateName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Test"
label_settings = SubResource("LabelSettings_pjgor")

[node name="crewmateIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_5myyk")
expand_mode = 5

[node name="crewmateHP" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxTexture_5yk5s")
theme_override_styles/fill = SubResource("StyleBoxTexture_pwo5t")
